k3s-userapps/headplane/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headplane
  namespace: headplane
spec:
  selector:
    app: headplane
  ports:
    - name: http
      port: 3000
      targetPort: http
